adding k8s folder